kubernetes/acc-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: account-service
  selfLink: /api/v1/namespaces/default/services/account-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: port1
    nodePort: 30578
    port: 2222
    protocol: TCP
    targetPort: 2222
  - name: port2
    nodePort: 31292
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    run: account-service
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
