kubernetes/second.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: second
spec:
  template:
    metadata:
      labels:
        app: second
    spec:
      containers:
      - image: jayaram269/second
        name: second
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: second
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: second
  type: ClusterIP
