kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sprk8
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
   - http:
      paths:
      - backend:
          serviceName: employee
          servicePort: 8080
        path: /employee
     - backend:
          serviceName: department
          servicePort: 8080
        path: /department
